# openlqm

./: .gitignore  CMakeLists.txt  NOTICE.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
OpenLQM/: CMakeLists.txt  OpenLQMConfig.cmake.in  clarity.cpp  image_resolution.cpp  image_resolution.hpp  img_util.cpp  main.cpp  minutia.cpp  openlqm.1  openlqm.cpp
OpenLQM/include/openlqm/: openlqm.hpp.in  openlqm_clarity.hpp  openlqm_img_util.hpp  openlqm_impl.hpp  openlqm_minutia.hpp
OpenLQM/openlqm_cmake_utils/: extract_and_set.cmake  init.cmake  package.wxs
